--- a/package.json
+++ b/package.json
@@ -50,14 +50,15 @@
     "tap": "^15.0.9"
   },
   "dependencies": {
-    "cron": "^1.8.2",
     "dayjs": "^1.10.4",
     "dotenv": "^9.0.2",
     "env": "^0.0.2",
     "env-schema": "^3.0.1",
     "got": "^11.8.2",
+    "node-cron": "^3.0.0",
     "pino": "^6.11.3",
     "pino-pretty": "^4.8.0",
+    "piscina": "^3.1.0",
     "require-dir": "^1.2.0"
   }
 }
