--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crypto-alert",
-  "version": "1.3.23",
+  "version": "1.0.0-0",
   "description": "Generates flags for unix command from a key/value object",
   "main": "./src/index.js",
   "scripts": {
