--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Generates flags for unix command from a key/value object",
   "main": "./src/index.js",
   "scripts": {
-    "test": "nyc --reporter=lcov  --reporter=text-summary tap"
+    "test": "nyc --reporter=lcov  --reporter=text-summary tap",
+    "prepare": "husky install"
   },
   "bugs": {
     "url": "https://github.com/Kirkhammetz/crypto-alert/issues"
@@ -41,7 +42,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
+    "husky": "^6.0.0",
     "lint-staged": "^10.2.1",
     "markdown-toc": "^1.2.0",
     "nyc": "^15.1.0",
